<resources>
    <string name="app_name">SeatReservation</string>
    <string name="title_activity_bottom_nav_test">BottomNavTestActivity</string>
    <string name="title_home">预约</string>
    <string name="title_dashboard">状态</string>
    <string name="title_notifications">我</string>
    <string name="title_activity_app_bar">AppBarActivity</string>
    <string name="login_id_hint">帐号</string>
    <string name="login_password_hint">密码</string>
    <string name="login_hint">登录</string>
    <string name="login_title">寻座</string>
    <string name="page_person_account">帐号</string>
    <string name="page_person_settings">设置</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_register">新用户注册</string>
    <string name="settings_about">关于</string>
    <string name="settings_feedback">反馈</string>
    <string name="settings_quit">退出</string>
    <string name="page_person_history">历史</string>
    <string name="settings_logoff">注销</string>
    <string name="register_title">用户注册</string>
    <string name="register_id_hint">帐号</string>
    <string name="register_password_hint">密码</string>
    <string name="register_password_confirm_hint">确认密码</string>
    <string name="register_hint">注册</string>
</resources>
